--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "homepage": "https://creativestyle.de",
   "license": "OSL-3.0",
   "require": {
-    "symfony/stopwatch": "^5.0"
+    "symfony/stopwatch": "^5.0",
+    "psr/log": "^3.0"
   },
   "autoload": {
     "files": [
