--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "https://creativestyle.de",
   "license": "OSL-3.0",
   "require": {
-    "symfony/stopwatch": "^5.0 || ^6.0" || ^7.0",
+    "symfony/stopwatch": "^5.0 || ^6.0 || ^7.0",
     "psr/log": "^3.0"
   },
   "autoload": {
